--- a/.kube/rendertron-deployment.yaml
+++ b/.kube/rendertron-deployment.yaml
@@ -20,3 +20,10 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3000
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "1Gi"
+            cpu: "1000m"
